# virginvschad

./: .gitignore  pyproject.toml  readme.md
config/: config.json
old/: chadwithnx.py  virginvschad.py
src/: cache.py  main.py  openai_client.py
