[tool.poetry]
name = "virginvschad"
version = "0.1.0"
description = ""
authors = ["tasbasmn <nazifts@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keyring = "^25.2.1"
openai = "^1.35.10"
matplotlib = "^3.9.1"
networkx = "^3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
